# memory-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  __init__.py  agent.py  agent_loop.py  agent_runner.py  cli_oneshot.py  compactor.py  config.py  context_builder.py  errors.py  iteration1_review.md  llm_client.py  logging_config.py  main.py  mcp_server.py  memory.json  memory.py  memory_store.py  pyproject.toml  repl.py  requirements.txt  skills_manager.py  test_ytdlp_douyin.py  video_analyzer.py  web.py
.gitnexus/: lbug  lbug.wal
cli/: __init__.py  __main__.py
memory_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resource/: DESIGN.md
skills/: SKILL.md
skills/coding/: SKILL.md
skills/memory/: SKILL.md
skills/review/: SKILL.md
skills/search/: SKILL.md
skills/video-analysis/: SKILL.md
templates/: SOUL.md  USER.md  compact_prompt.md  system_prompt.md
tests/: test_compactor.py  test_config.py  test_errors.py  test_memory_store.py  test_shell_tool.py
tools/: __init__.py  base.py  direct_video_tool.py  file_tool.py  mcp_bridge.py  mcp_tool.py  obsidian_tool.py  registry.py  shell_tool.py  video_tool.py  web_tool.py  ytdlp_tool.py
web/: app.js  index.html  styles.css
